infra/k8s/auth-depl.yaml
# auth deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  # how to find each pod
  selector:
    matchLabels:
      app: auth
  # how to create each individual pod
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: quantacake/auth
---
# auth service
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP # default type
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
