infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  # how the deployment is going to find the
  # pods it actually creates.
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      # label that is applied to the pod
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  # selects the pods its going to govern access to
  # ie find any pod with a label of app: auth-mongo
  selector:
    app: auth-mongo
  ports:
    - name: db # logging purposes
      protocol: TCP
      port: 27017
      targetPort: 27017
